--- a/src/main/resources/jdbc/eval/retrieval-evaluator.yaml
+++ b/src/main/resources/jdbc/eval/retrieval-evaluator.yaml
@@ -1,3 +1,3 @@
-class: edu.cmu.lti.oaqa.framework.eval.retrieval.RetrievalEvalAggregator
+class: edu.cmu.lti.oaqa.framework.eval.retrieval.RetrievalMeasuresEvaluator
 persistence-provider: |
   inherit: jdbc.eval.retrieval-evaluation-persistence-provider
