added sqlite persistence provider

--- a/src/main/resources/jdbc/sqlite/db/experiment-persistence-provider.yaml
+++ b/src/main/resources/jdbc/sqlite/db/experiment-persistence-provider.yaml
@@ -1,6 +1,7 @@
 inherit: jdbc.db.experiment-persistence-provider
+
 insert-experiment-query: |
-  MERGE INTO EXPERIMENT (ID,NAME,AUTHOR,CONFIGU,resource)
+  INSERT OR IGNORE INTO EXPERIMENT (id,name,author,configuration,resource)
   VALUES (?,?,?,?,?)
 
 experiments: |
