--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
       <version>0.9.1.2</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+    	<groupId>org.xerial</groupId>
+    	<artifactId>sqlite-jdbc</artifactId>
+    	<version>3.7.2</version>
+    </dependency>
 	</dependencies>
 </project>
