--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,6 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
-			<groupId>edu.cmu.lti.oaqa.bio.core</groupId>
-			<artifactId>baseqa</artifactId>
-			<version>1.6.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>3.0.5.RELEASE</version>
@@ -26,6 +21,11 @@
     	<groupId>org.xerial</groupId>
     	<artifactId>sqlite-jdbc</artifactId>
     	<version>3.7.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>edu.cmu.lti.oaqa.cse</groupId>
+    	<artifactId>cse-framework</artifactId>
+    	<version>2.1.1-SNAPSHOT</version>
     </dependency>
 	</dependencies>
 </project>
