--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
     	<artifactId>cse-framework</artifactId>
     	<version>2.1.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.21</version>
+    </dependency>
 	</dependencies>
 </project>
