--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,30 @@
 	<groupId>edu.cmu.lti.oaqa.framework.impl</groupId>
 	<artifactId>jdbc-providers</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    <name>JDBC Providers for CSE-Framework</name>
+    <url>https://github.com/oaqa/jdbc-providers</url>
+    <issueManagement>
+        <system>github.com</system>
+        <url>https://github.com/oaqa/jdbc-providers/issues</url>
+    </issueManagement>
+    <inceptionYear>2012</inceptionYear>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <url>git@github.com:oaqa/jdbc-providers.git</url>
+        <connection>scm:git:git@github.com:oaqa/jdbc-providers.git</connection>
+        <developerConnection>scm:git:git@github.com:oaqa/jdbc-providers.git</developerConnection>
+    </scm>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
