--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
     	<groupId>edu.cmu.lti.oaqa.cse</groupId>
     	<artifactId>cse-framework</artifactId>
-    	<version>2.2.0</version>
+    	<version>2.3.0-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>mysql</groupId>
