--- a/src/main/resources/jdbc/cse/phase-persistence-provider.yaml
+++ b/src/main/resources/jdbc/cse/phase-persistence-provider.yaml
@@ -1,6 +1,6 @@
 class: edu.cmu.lti.oaqa.cse.driver.phase.impl.JdbcPhasePersistenceProvider
 insert-query: |
-  INSERT IGNORE INTO cas
+  INSERT IGNORE INTO cas_str
     (optionId,question,sequenceId,dataset,phase,experiment,
     startTime,predecesorId,hostname,trace,traceHash)
   VALUES (?,?,?,?,?,?,?,?,?,?,?)
@@ -8,7 +8,7 @@ insert-meta-query: |
   INSERT IGNORE INTO experiment_meta (experiment,phase,stage,size) 
   VALUES (?,?,?,?)
 update-query: |
-  UPDATE cas SET xcas = ?, status = ?, endTime = ? WHERE traceHash = ?
+  UPDATE cas_str SET xcas = ?, status = ?, endTime = ? WHERE traceHash = ?
 select-query: |
-  SELECT status, xcas FROM cas WHERE traceHash = ? AND
+  SELECT status, xcas FROM cas_str WHERE traceHash = ? AND
    status IS NOT NULL AND status <> ?
