--- a/src/main/resources/jdbc/eval/retrieval-evaluator-consumer.yaml
+++ b/src/main/resources/jdbc/eval/retrieval-evaluator-consumer.yaml
@@ -1,4 +1,4 @@
 class: edu.cmu.lti.oaqa.framework.eval.TraceConsumer
 name: retrieval-measures-evaluator 
 experiment-listeners: |
-  - inherit: eval.default-retrieval-evaluator
+  - inherit: jdbc.eval.retrieval-evaluation-persistence-provider
