--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.oaqa.framework.impl</groupId>
 	<artifactId>jdbc-providers</artifactId>
-	<version>y</version>
+	<version>2.3.2-SNAPSHOT</version>
          <parent>
 	        <groupId>edu.cmu.lti.oaqa</groupId>
 	        <artifactId>oaqa</artifactId>
