--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.oaqa.framework.impl</groupId>
 	<artifactId>jdbc-providers</artifactId>
-	<version>2.3.3-SNAPSHOT</version>
+	<version>2.4.0-SNAPSHOT</version>
          <parent>
 	        <groupId>edu.cmu.lti.oaqa</groupId>
 	        <artifactId>oaqa</artifactId>
@@ -52,9 +52,14 @@
     	<version>3.7.2</version>
     </dependency>
     <dependency>
-    	<groupId>edu.cmu.lti.oaqa.cse</groupId>
-    	<artifactId>cse-framework</artifactId>
-    	<version>2.3.1</version>
+      <groupId>edu.cmu.lti.oaqa.cse</groupId>
+       <artifactId>cse-framework</artifactId>
+       <version>2.3.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>edu.cmu.lti.oaqa.ecd</groupId>
+    	<artifactId>uima-ecd</artifactId>
+    	<version>2.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>mysql</groupId>
