--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>edu.cmu.lti.oaqa.cse</groupId>
        <artifactId>cse-framework</artifactId>
-       <version>2.3.1</version>
+       <version>2.3.3-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>edu.cmu.lti.oaqa.ecd</groupId>
