--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>edu.cmu.lti.oaqa.framework.impl</groupId>
-	<artifactId>jdbc-providers</artifactId>
-	<version>2.4.0-SNAPSHOT</version>
-         <parent>
-	        <groupId>edu.cmu.lti.oaqa</groupId>
-	        <artifactId>oaqa</artifactId>
-		<version>4</version>
-	</parent>
-	<name>JDBC Providers for CSE-Framework</name>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>edu.cmu.lti.oaqa.framework.impl</groupId>
+    <artifactId>jdbc-providers</artifactId>
+    <version>2.5.1-SNAPSHOT</version>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    <name>JDBC Providers for CSE-Framework</name>
     <url>https://github.com/oaqa/jdbc-providers</url>
     <issueManagement>
         <system>github.com</system>
@@ -27,52 +29,62 @@
         <connection>scm:git:git://github.com/oaqa/jdbc-providers.git</connection>
         <developerConnection>scm:git:git://github.com/oaqa/jdbc-providers.git</developerConnection>
     </scm>
-     <repositories>
-         <repository>
-	       <id>oaqa</id>
-	             <url>http://mu.lti.cs.cmu.edu:8081/nexus/content/groups/public</url>
-		         </repository>
-	</repositories>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>3.0.5.RELEASE</version>
-			<type>jar</type>
-		</dependency>
-    <dependency>
-      <groupId>c3p0</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>0.9.1.2</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-    	<groupId>org.xerial</groupId>
-    	<artifactId>sqlite-jdbc</artifactId>
-    	<version>3.7.2</version>
-    </dependency>
-    <dependency>
-      <groupId>edu.cmu.lti.oaqa.cse</groupId>
-       <artifactId>cse-framework</artifactId>
-       <version>2.3.4-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>mysql</groupId>
-    	<artifactId>mysql-connector-java</artifactId>
-    	<version>5.1.21</version>
-    </dependency>
-	</dependencies>
-        <build>
-                <plugins>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <configuration>
-                                        <source>1.6</source>
-                                        <target>1.6</target>
-                                </configuration>
-                        </plugin>
-                </plugins>
-        </build>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>3.0.5.RELEASE</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.cmu.lti.oaqa.cse</groupId>
+            <artifactId>cse-framework</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.21</version>
+        </dependency>
+    </dependencies>
 </project>
